@@ -1,5 +1,9 @@
 2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
+	* BlockCipherModeTest.cs: CBC, CFB, OFB, CTRブロック暗号モードのテストを追加
+
+2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
 	* DummyAlgorithm.cs: 基底クラスのコンストラクタインターフェイス変更に対応
 
 2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
